# getB-SIMD

./: BFieldCache.cxx  BFieldCache.h  BFieldCache.icc  BFieldMesh.h  BFieldMesh.icc  BFieldVector.h  BFieldZone.h  CMakeLists.txt  LICENSE  README.md  buildBench.sh  buildGoogleBenchmark.sh  buildTest.sh  getB_bench.cxx  getB_test.cxx  getCache_bench.cxx  vec.h
